[SSH与SSM学习之Spring14——动态代理之自己的AOP框架]

--- a/src/com/qwm/spring2/d_myaop/config.properties
+++ b/src/com/qwm/spring2/d_myaop/config.properties
@@ -1,4 +1,4 @@
-#bean=java.util.ArrayList
-bean=com.qwm.spring2.d_myaop.ProxyFactoryBean
+bean=java.util.ArrayList
+#bean=com.qwm.spring2.d_myaop.ProxyFactoryBean
 bean.advice=com.qwm.spring2.d_myaop.MyAdvice
 bean.target=java.util.ArrayList
